# docs/swagger.yaml
@@ -24,6 +24,15 @@ definitions:
       status:
         type: string
     type: object
+  schema.SuccessResult:
+    properties:
+      data:
+        description: 返回数据
+        type: object
+      status:
+        description: '"OK"'
+        type: string
+    type: object
   schema.User:
     properties:
       email:
@@ -64,14 +73,17 @@ paths:
         description: 分页索引
         in: query
         name: current
-        required: true
         type: integer
       - default: 10
         description: 分页大小
         in: query
         name: page_size
-        required: true
         type: integer
+      - default: true
+        description: 是否分页
+        in: query
+        name: pagination
+        type: boolean
       - description: 用户名称
         in: query
         name: user_name
@@ -80,9 +92,14 @@ paths:
       - application/json
       responses:
         "200":
-          description: '{staus:"OK", data:响应数据}'
+          description: '{status:"OK", data:响应数据}'
           schema:
-            $ref: '#/definitions/schema.UserQueryResult'
+            allOf:
+            - $ref: '#/definitions/schema.SuccessResult'
+            - properties:
+                data:
+                  $ref: '#/definitions/schema.UserQueryResult'
+              type: object
         "400":
           description: '{code:400, status:"OK", message:"请求参数错误"}'
           schema:
